force-app/main/default/objects/Historical_Order__c/Historical_Order__c.object-meta.xml
<CustomObject>
    <label>Historical Order</label>
    <nameField>
        <displayFormat>H-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>