force-app/main/default/objects/Historical_Order__c/fields/Billing_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Billing_FirstName__c</fullName>
    <label>Billing FirstName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>