force-app/main/default/objects/Historical_Order__c/fields/Billing_LastName__c.field-meta.xml
<CustomField>
    <fullName>Billing_LastName__c</fullName>
    <label>Billing LastName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>