force-app/main/default/objects/Historical_Order__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <label>Date Completed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>