force-app/main/default/objects/Historical_Order__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <label>Date Paid</label>
    <length>30</length>
    <type>Text</type>
</CustomField>