force-app/main/default/objects/Historical_Order__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception</label>
    <referenceTo>B2B_Custom_Exception__c</referenceTo>
    <relationshipLabel>Historical Orders</relationshipLabel>
    <relationshipName>Historical_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>