force-app/main/default/objects/Historical_Order__c/fields/FFP_Professional_Role__c.field-meta.xml
<CustomField>
    <fullName>FFP_Professional_Role__c</fullName>
    <label>FFP Professional Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioral Consultant</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Dog Walker</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Assistant Program</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Program</fullName>
            </value>
            <value>
                <fullName>Faculty - Veterinary Technician Program</fullName>
            </value>
            <value>
                <fullName>Groomer</fullName>
            </value>
            <value>
                <fullName>Kennel Attendant/Technician</fullName>
            </value>
            <value>
                <fullName>Other (Non-Veterinary)</fullName>
            </value>
            <value>
                <fullName>Other (Veterinary)</fullName>
            </value>
            <value>
                <fullName>Pet Sitter</fullName>
            </value>
            <value>
                <fullName>Practice Manager</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary Assistant</fullName>
            </value>
            <value>
                <fullName>Student - Veterinary Technician</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Team Admin</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Technician Student</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Veterinary Assistant</fullName>
            </value>
            <value>
                <fullName>Veterinary Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>