force-app/main/default/objects/Historical_Order__c/fields/Group_Role__c.field-meta.xml
<CustomField>
    <fullName>Group_Role__c</fullName>
    <label>Group Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leader</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>No Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>