force-app/main/default/objects/Historical_Order__c/fields/Guid__c.field-meta.xml
<CustomField>
    <fullName>Guid__c</fullName>
    <label>Guid</label>
    <type>Url</type>
</CustomField>