force-app/main/default/objects/Historical_Order__c/fields/Member_of_Group__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Group__c</fullName>
    <label>Member of Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>