force-app/main/default/objects/Historical_Order__c/fields/Num_Items_Sold__c.field-meta.xml
<CustomField>
    <fullName>Num_Items_Sold__c</fullName>
    <label>Num Items Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>