force-app/main/default/objects/Historical_Order__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>