force-app/main/default/objects/Historical_Order__c/fields/Post_Author__c.field-meta.xml
<CustomField>
    <fullName>Post_Author__c</fullName>
    <label>Post Author</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>