force-app/main/default/objects/Historical_Order__c/fields/Post_Modified__c.field-meta.xml
<CustomField>
    <fullName>Post_Modified__c</fullName>
    <label>Post Modified</label>
    <type>Date</type>
</CustomField>