force-app/main/default/objects/Historical_Order__c/fields/Post_Name__c.field-meta.xml
<CustomField>
    <fullName>Post_Name__c</fullName>
    <label>Post Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>