force-app/main/default/objects/Historical_Order__c/fields/Post_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_Title__c</fullName>
    <label>Post Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>