force-app/main/default/objects/Historical_Order__c/fields/Returning_Customer__c.field-meta.xml
<CustomField>
    <fullName>Returning_Customer__c</fullName>
    <label>Returning Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>