force-app/main/default/objects/Historical_Order__c/fields/SF_Order__c.field-meta.xml
<CustomField>
    <fullName>SF_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Historical Orders</relationshipLabel>
    <relationshipName>Historical_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>