force-app/main/default/objects/Historical_Order__c/fields/Shipping_Total_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total_With_Tax__c</fullName>
    <formula>Shipping_Total__c  +  Tax_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Total With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>