force-app/main/default/objects/Historical_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>wc-cancelled</fullName>
            </value>
            <value>
                <fullName>wc-completed</fullName>
            </value>
            <value>
                <fullName>wc-failed</fullName>
            </value>
            <value>
                <fullName>wc-on-hold</fullName>
            </value>
            <value>
                <fullName>wc-pending</fullName>
            </value>
            <value>
                <fullName>wc-processing</fullName>
            </value>
            <value>
                <fullName>wc-refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>