force-app/main/default/objects/Historical_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Historical_Order_Id__c</columns>
    <columns>Billing_Email__c</columns>
    <columns>Successful_Insert__c</columns>
    <columns>SF_Order__c</columns>
    <columns>Exception__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>